--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.GamerConnect"
         tools:targetApi="31">
         <activity
-            android:name=".DashboardScreen"
+            android:name=".MainDashboard.DashboardScreen"
             android:exported="false" />
         <activity
             android:name=".RegistrationActivity"
