--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,4 +58,8 @@ dependencies {
     // Google Play services
     implementation 'com.google.android.gms:play-services-auth:20.3.0'
 
+    //Junit 5
+    testImplementation(platform("org.junit:junit-bom:5.9.1"))
+    testImplementation("org.junit.jupiter:junit-jupiter")
+
 }
