Edit Gradle for IGDB Wrapper, Homepage+layout, added to manifest

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,8 +21,9 @@
             android:resource="@xml/game_mode_config" />
 
         <activity
-            android:name=".MainDashboard.DashboardScreen"
-            android:exported="false" />
+            android:name=".HomePageActivity" />
+        <activity
+            android:name=".MainDashboard.DashboardScreen" />
         <activity
             android:name=".RegistrationActivity"
             android:exported="false" />
