--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ android {
     buildToolsVersion '32.0.0'
 }
 
+
 dependencies {
     implementation platform('com.google.firebase:firebase-bom:31.1.0')
     implementation 'com.google.firebase:firebase-auth-ktx'
@@ -48,7 +49,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 //    implementation 'com.android.support:design:26.1.0'
-    implementation 'io.github.husnjak:igdb-api-jvm:1.0.7'
+    implementation 'io.github.husnjak:igdb-api-jvm:1.0.8'
     // Gson
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     //Retrofit
@@ -58,14 +59,15 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:20.3.0'
 
     // IGDB Kotlin wrapper
-    implementation 'io.github.husnjak:igdb-api-jvm:1.0.7'
+    implementation 'io.github.husnjak:igdb-api-jvm:1.0.8'
 
     //Junit 5
     testImplementation(platform("org.junit:junit-bom:5.9.1"))
     testImplementation("org.junit.jupiter:junit-jupiter")
 
     // for adding recyclerview
-    implementation 'androidx.recyclerview:recyclerview:1.2.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    implementation("androidx.recyclerview:recyclerview-selection:1.1.0")
 
     // for adding cardview
     implementation 'androidx.cardview:cardview:1.0.0'
@@ -73,4 +75,11 @@ dependencies {
     implementation 'com.google.android.material:material:1.7.0'
     // Realtime Database library
     implementation 'com.google.firebase:firebase-database-ktx'
+    // Kotlin Fuel
+    implementation 'com.github.kittinunf.fuel:fuel:<latest-version>'
+    // coroutines
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1")
+
+
+
 }
