--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,11 +35,13 @@ android {
 
 
 dependencies {
+
     implementation platform('com.google.firebase:firebase-bom:31.1.0')
     implementation 'com.google.firebase:firebase-auth-ktx'
 
     implementation 'androidx.core:core-ktx:1.9.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
+    implementation("androidx.appcompat:appcompat-resources:1.5.1")
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.firebase:firebase-auth:21.1.0'
@@ -76,7 +78,7 @@ dependencies {
     // Realtime Database library
     implementation 'com.google.firebase:firebase-database-ktx'
     // Kotlin Fuel
-    implementation 'com.github.kittinunf.fuel:fuel:<latest-version>'
+    implementation 'com.github.kittinunf.fuel:fuel:2.3.1'
     // coroutines
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1")
 
